# pithddu

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: dashboard.yml  firmware.yml
aur/: README.md
aur/pithddu-dashboard/: .SRCINFO  .gitignore  PKGBUILD
aur/pithddu-dashboard-bin/: .SRCINFO  PKGBUILD
dashboard/: Cargo.toml  SHARED_MEMORY.md  build.rs  install-desktop.sh  pith-dashboard.desktop
dashboard/examples/: ui_preview.rs
dashboard/src/: app.rs  callbacks.rs  catalog.rs  clipboard.rs  ctx.rs  games.rs  loops.rs  main.rs  paths.rs  persist.rs  screenshot.rs  state.rs  trackmap.rs  tray.rs  util.rs
dashboard/ui/: app.slint  models.slint  theme.slint  widgets.slint
firmware/: Cargo.toml  justfile  partitions.csv
firmware/main/: field_registry.json
firmware/src/: display.rs  hid.rs  led.rs  main.rs  ota.rs  state.rs  ui.rs  usb.rs
pith-bios/: Cargo.toml
pith-bios/src/: lib.rs
pith-core/: build.rs
pith-core/src/: format.rs  le.rs  lib.rs  relatives.rs  shift.rs  shm.rs  simhub.rs
pith-device/: Cargo.toml
pith-device/src/: dash.rs  hid.rs  lib.rs
pith-flash/: Cargo.toml
pith-flash/src/: main.rs
pith-recovery/: Cargo.toml  build.rs  justfile  partitions.csv  sdkconfig.defaults
pith-recovery/.cargo/: config.toml
pith-shm-bridge/: Cargo.toml  README.md  pith-shim-run
pith-ui/: Cargo.toml
pith-ui/examples/: preview.rs
pith-ui/src/: lib.rs
simhub-plugin/: Forwarder.cs  FrameBuilder.cs  PithDdu.SimHubPlugin.csproj  PithSettings.cs  PithTelemetryPlugin.cs  README.md  SettingsControl.cs
(+54 files in other folders)
